returning window right location so am ready to try making if/else to fix popup overflow issue

--- a/src/components/skills.module.scss
+++ b/src/components/skills.module.scss
@@ -95,24 +95,32 @@ a {
 
 .embedWindow {
   display: block;
-  position: relative;
-  // left: 50px;
-  // right: 250px;
-  // z-index: 1;
+  // position: relative;
+  width: 50vh;
+  height: 20vw;
   max-width: 100vh; 
   max-height: 100vw;
   // padding-left: 20vw;
   // padding-right: 20vw;
-  // width: calc(50vw - 35px);;
   // height: 18vh;
   border: solid;
   border-color: pink;
 }
 
 embed {
+  // min-width: 300px;
+  // max-width: 50%;
+  // left: 50%;
+  // margin-left: -25%;
+  // margin-right: -25%;
+  // width: 50vh;
+  // height: 20vw;
   max-width: 100vh; 
   max-height: 100vw;
-  // right: 150px;
+  // min-width: 100vh; 
+  // min-height: 100vw;
+  // width: calc(50vw - 35px);
+
   border: solid;
   border-color: red;
 }
